--- a/package.json
+++ b/package.json
@@ -20,11 +20,19 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
-    "@ionic-native/core": "^5.22.0-beta-1",
+    "@grpc/grpc-js": "^1.1.3",
+    "@ionic-native/core": "^5.27.0",
+    "@ionic-native/geolocation": "^5.27.0",
     "@ionic-native/google-maps": "^5.27.0-beta-20200630",
+    "@ionic-native/native-geocoder": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "cordova-browser": "6.0.0",
+    "cordova-plugin-add-swift-support": "2.0.2",
+    "cordova-plugin-geolocation": "4.0.2",
+    "cordova-plugin-googlemaps": "2.7.1",
+    "cordova-plugin-nativegeocoder": "3.4.1",
     "firebase": "^7.15.5",
     "ionic2-calendar": "^0.6.6",
     "rxjs": "~6.5.1",
@@ -38,10 +46,16 @@
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
     "@ionic/angular-toolkit": "^2.1.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
@@ -56,6 +70,21 @@
   },
   "description": "An Ionic project",
   "cordova": {
-    "plugins": {}
+    "plugins": {
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "<AIzaSyD1wB_v-ENqY-Y6ti3vG3rRRArbP0s_wkE>"
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-geolocation": {}
+    },
+    "platforms": [
+      "browser"
+    ]
   }
 }
