--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cordova-plugin-nativegeocoder": "3.4.1",
     "firebase": "^7.15.5",
     "ionic2-calendar": "^0.6.6",
+    "moment": "^2.27.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
