Icono y splash con el logo y cambios para poder generar el apk

--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
       "cordova-plugin-geolocation": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
